--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+alembic==1.16.4
 annotated-types==0.7.0
 anyio==4.9.0
 bcrypt==4.3.0
@@ -18,6 +19,8 @@ httpx==0.28.1
 hyperframe==6.1.0
 idna==3.10
 iniconfig==2.1.0
+Mako==1.3.10
+MarkupSafe==3.0.2
 packaging==25.0
 passlib==1.7.4
 pluggy==1.6.0
